--- a/03_react_app/src/components/Meals/Meal/Meal.module.css
+++ b/03_react_app/src/components/Meals/Meal/Meal.module.css
@@ -1,4 +1,35 @@
 .meal {
-    border-bottom: 1px solid #000;
-    
+  border-bottom: 1px solid #f2f2f2;
+  display: flex;
+  padding: 20rem;
+  align-items: center;
+}
+.imgBox {
+  width: 260rem;
+  margin-right: 20rem;
+}
+img {
+  width: 100%;
+}
+.title {
+  font-weight: normal;
+  font-size: 18px;
+  margin: 0;
+}
+.desc {
+  color: #928f8f;
+  padding-right: 15rem;
+}
+.priceBox {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40rem;
+}
+.price {
+    font-weight: bold;
+    font-size: 18px;
+}
+.price::before {
+    content: '￥';
+    font-size: 12px;
 }
