--- a/03_react_app/src_03_Context的用法/components/Meals/Meal/Meal.module.css
+++ b/03_react_app/src_03_Context的用法/components/Meals/Meal/Meal.module.css
@@ -13,13 +13,12 @@ img {
 }
 .title {
   font-weight: normal;
-  font-size: 35rem;
+  font-size: 18px;
   margin: 0;
 }
 .desc {
   color: #928f8f;
   padding-right: 15rem;
-  font-size: 20rem;
 }
 .priceBox {
   display: flex;
@@ -28,9 +27,9 @@ img {
 }
 .price {
     font-weight: bold;
-    font-size: 35rem;
+    font-size: 18px;
 }
 .price::before {
     content: '￥';
-    font-size: 25rem;
+    font-size: 12px;
 }
